--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,14 @@
 :root{
-    --1: #FA2;
-    --2: #022;
-    --3: #03A;
-    --4: #024;
-    --5: #06F;
+    --c1: #FFAA22;
+    --c2: #002222;
+    --c3: #0033AA;
+    --c4: #002244;
+    --c5: #0066FF;
 }
 
 *{
-    background-color: var(--2);
-    color: var(--1);
+    background-color: var(--c2);
+    color: var(--c1);
     margin: 0;
 }
 
@@ -17,7 +17,7 @@ h1, h2, h3{
     margin: 0.5em;
 }
 
-p, li, nav{
+p, li, nav, label{
     font-family: "Futura","Trebuchet MS","Arial,sans-serif"; 
     margin-left: 0.5em;
     margin-bottom: 0.5em;
@@ -26,7 +26,7 @@ p, li, nav{
 .title{
     margin: 0;
     padding: 0.5em;
-    background-color: var(--2);
+    background-color: var(--c2);
     text-align: center;
     vertical-align: middle;
     height: 2em;
@@ -39,13 +39,13 @@ p, li, nav{
 }
 
 .navbar, .navbar span, .navbar img{
-    background-color: var(--4);
+    background-color: var(--c4);
     position: sticky;
     top: 0;
 }
 
 .navbar a{
-    background-color: var(--3);
+    background-color: var(--c3);
     margin: 0;
     text-decoration: none;
     padding: 0.3em 0.5em;
@@ -62,19 +62,19 @@ p, li, nav{
 }
 
 .page_text{
-    background-color: var(--4);
+    background-color: var(--c4);
     margin: 3em;
     padding: 1em;
     border-radius: 2em;
 }
 
 .page_text h2{
-    background-color: var(--4);
+    background-color: var(--c4);
     text-align: center;
 }
 
 .container, .container h3, .container p, .container ul, .container li{
-    background-color: var(--2);
+    background-color: var(--c2);
 }
 
 .container{
@@ -91,13 +91,13 @@ p, li, nav{
 
 .container h3, .container h2{
     text-align: center;
-    background-color: var(--3);
+    background-color: var(--c3);
     border-radius: 0.5em;
     padding: 0.5em;
 }
 
 .hoverable:hover, .selected{
-    background-color: var(--5) !important; 
+    background-color: var(--c5) !important; 
     color: white;
 }
 
@@ -131,4 +131,17 @@ img, video{
 
 a{
     text-decoration: none;
+}
+
+.text_hoverable{
+    transition: color 0.2s ease;
+}
+
+.text_hoverable:hover{
+    color: white;
+}
+
+input{
+    background-color: var(--c3);
+    margin: 0,5em 2em;
 }
